--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -1,26 +1,13 @@
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./public/js",
     "rootDir": ".",
-    "target": "ES2020",
-    "module": "ES2020",
-    "lib": ["DOM", "ES2020"],
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    "lib": ["dom", "es2020"],
+    "types": ["node"],
     "strict": false,
-    "skipLibCheck": true,
-    "declaration": false,
-    "sourceMap": true
+    "skipLibCheck": true
   },
-  "include": [
-    "client/src/**/*",
-    "src/types/shared.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "src/**/*"
-  ]
+  "include": ["client/src/**/*", "src/types/**/*"],
+  "exclude": ["src/**/*", "node_modules", "dist"]
 }
