--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -1,13 +1,26 @@
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "target": "ES2020",
+    "module": "ES2020",
+    "lib": [
+      "ES2020",
+      "DOM"
+    ],
     "outDir": "./public/js",
-    "rootDir": ".",
-    "lib": ["dom", "es2020"],
-    "types": ["node"],
+    "rootDir": "./client/src",
     "strict": false,
-    "skipLibCheck": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node"
   },
-  "include": ["client/src/**/*", "src/types/**/*"],
-  "exclude": ["src/**/*", "node_modules", "dist"]
+  "include": [
+    "client/src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "src"
+  ]
 }
