--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,10 +1,13 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "types": ["node"]
+    "outDir": "./dist"
   },
-  "include": ["src/**/*"],
-  "exclude": ["client/**/*", "public/**/*", "node_modules", "dist"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "client"
+  ]
 }
